<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    tools:context=".ui.PreferenceActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/preference" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/function"
                android:textColor="#009688" />

            <com.nuaa.larry.wifiindoorlocation.widge.RippleView
                android:id="@+id/rv_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="10dp"
                android:paddingTop="16dp"
                app:rv_color="@color/gray"
                app:rv_rippleDuration="200"
                app:rv_type="rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/group_count"
                            android:textColor="#212121"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/group_count_desc"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/sp_group_count"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingRight="16dp"
                        android:background="@drawable/spinner_bg"
                        android:entries="@array/group_count" />

                </LinearLayout>

            </com.nuaa.larry.wifiindoorlocation.widge.RippleView>

            <include layout="@layout/divider" />

            <com.nuaa.larry.wifiindoorlocation.widge.RippleView
                android:id="@+id/rv_collect_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="10dp"
                android:paddingTop="16dp"
                app:rv_color="@color/gray"
                app:rv_rippleDuration="200"
                app:rv_type="rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="采集间隔"
                            android:textColor="#212121"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="每组数据的采集延迟时间"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/sp_collect_interval"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingRight="16dp"
                        android:background="@drawable/spinner_bg"
                        android:entries="@array/collect_interval" />

                </LinearLayout>

            </com.nuaa.larry.wifiindoorlocation.widge.RippleView>

            <include layout="@layout/divider" />

            <com.nuaa.larry.wifiindoorlocation.widge.RippleView
                android:id="@+id/rv_dependable_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="10dp"
                android:paddingTop="16dp"
                app:rv_color="@color/gray"
                app:rv_rippleDuration="200"
                app:rv_type="rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="可信概率"
                            android:textColor="#212121"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="小于该值的信号将被过滤"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/sp_dependable_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingRight="16dp"
                        android:background="@drawable/spinner_bg"
                        android:entries="@array/dependable_rate" />

                </LinearLayout>

            </com.nuaa.larry.wifiindoorlocation.widge.RippleView>


            <include layout="@layout/divider" />

            <com.nuaa.larry.wifiindoorlocation.widge.RippleView
                android:id="@+id/rv_ap_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:rv_color="@color/gray"
                app:rv_rippleDuration="200"
                app:rv_type="rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_ap_name"
                            android:textColor="#212121"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_ap_name_desc"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tv_ap_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|end"
                        android:textColor="@color/primary_text"
                        android:text="@string/wifi_name"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.nuaa.larry.wifiindoorlocation.widge.RippleView>

            <include layout="@layout/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="其他"
                android:textColor="#009688" />

            <com.nuaa.larry.wifiindoorlocation.widge.RippleView
                android:id="@+id/rv_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:rv_color="@color/gray"
                app:rv_rippleDuration="200"
                app:rv_type="rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="分享"
                        android:textColor="#212121"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="将该软件分享给你的朋友"
                        android:textSize="14sp" />
                </LinearLayout>

            </com.nuaa.larry.wifiindoorlocation.widge.RippleView>

            <include layout="@layout/divider" />

            <com.nuaa.larry.wifiindoorlocation.widge.RippleView
                android:id="@+id/rv_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:rv_color="@color/gray"
                app:rv_rippleDuration="200"
                app:rv_type="rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="检查更新"
                        android:textColor="#212121"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="获取最新版本"
                        android:textSize="14sp" />
                </LinearLayout>

            </com.nuaa.larry.wifiindoorlocation.widge.RippleView>

            <include layout="@layout/divider" />

            <com.nuaa.larry.wifiindoorlocation.widge.RippleView
                android:id="@+id/rv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:rv_color="@color/gray"
                app:rv_rippleDuration="200"
                app:rv_type="rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="关于"
                        android:textColor="#212121"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="查看版本信息"
                        android:textSize="14sp" />
                </LinearLayout>

            </com.nuaa.larry.wifiindoorlocation.widge.RippleView>

            <include layout="@layout/divider" />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>